# eruo-data-studio

./: .gitignore  LICENSE  README.md  com.macipra.Eruo.json  com.macipra.EruoDevel.json  com.macipra.eruo.devel.json  com.macipra.eruo.json  eruo-data-studio.in  meson.build  python3-meson-python.json  python3-numpy.json  python3-pandas.json  python3-versioneer.json  requirements-devel.txt  requirements.txt
build-aux/: build.sh  com.macipra.eruo.Devel.json  com.macipra.eruo.json  python3-duckdb-aarch64.json  python3-duckdb-x86_64.json  python3-eruo-strutil-devel.json  python3-eruo-strutil.json  python3-numpy-aarch64.json  python3-numpy-x86_64.json  python3-polars-aarch64.json  python3-polars-x86_64.json  python3-pyarrow-aarch64.json  python3-pyarrow-x86_64.json  python3-pytest.json  python3-python-dateutil.json  requirements-devel.txt  requirements.txt  run.sh  run.sh.example
data/: com.macipra.Eruo.desktop.in  com.macipra.Eruo.gschema.xml  com.macipra.Eruo.metainfo.xml.in  com.macipra.Eruo.service.in  com.macipra.eruo.desktop.in  com.macipra.eruo.gschema.xml  com.macipra.eruo.metainfo.xml.in  com.macipra.eruo.service.in  eruo-data-studio.gresource.xml  meson.build
data/icons/: meson.build
plugins/polars/eruo-strutil/: Cargo.toml
plugins/polars/eruo-strutil/eruo_strutil/: __init__.py
plugins/polars/eruo-strutil/src/: expressions.rs
plugins/polars/eruo-strutil/test/: test_pig_latinnify.py  test_split_by_chars.py  test_to_sentence_case.py  test_to_sponge_case.py
po/: POTFILES.in  meson.build
src/: clipboard_manager.py  command_palette_overlay.py  database_add_connection_dialog.py  database_add_connection_mysql_view.py  database_add_connection_postgresql_view.py  database_add_connection_sqlite_view.py  database_rename_connection_dialog.py  dbms.py  display.py  eruo-data-studio.gresource.xml  eruo-data-studio.in  file_manager.py  file_save_as_csv_view.py  file_save_as_dialog.py  file_save_as_erbook_view.py  file_save_as_json_view.py  file_save_as_parquet_view.py  globals.py  history_manager.py  main.py  meson.build  plugin_repository.py  rename_sheet_dialog.py  renderer.py  search_replace_all_view.py  search_replace_overlay.py  selection.py  sheet_cell_menu.py  sheet_data.py  sheet_display.py  sheet_document.py  sheet_functions.py  sheet_header_menu.py  sheet_manager.py  sheet_notebook.py  sheet_notebook_view.py  sheet_operation_dialog.py  sheet_rename_dialog.py  sheet_renderer.py  sheet_selection.py  (+11 more)
src/css/: base.css  style-dark.css  style.css
src/gtk/: help-overlay.ui  sheet-column-header-menu.ui  sheet-column-locator-menu.ui  sheet-column-menu.ui  window.ui
src/test/: test_dax_expression.py  test_dax_function.py  test_dax_parser.py
src/ui/: command-palette-overlay.ui  database-add-connection-dialog.ui  database-add-connection-mysql-view.ui  database-add-connection-postgresql-view.ui  database-add-connection-sqlite-view.ui  database-rename-connection-dialog.ui  file-save-as-csv-view.ui  file-save-as-dialog.ui  file-save-as-erbook-view.ui  file-save-as-json-view.ui  file-save-as-parquet-view.ui  rename-sheet-dialog.ui  search-replace-all-view.ui  search-replace-overlay.ui  sheet-header-menu.ui  sheet-notebook-view.ui  sheet-operation-dialog.ui  sheet-rename-dialog.ui  sheet-view.ui  sidebar-home-view.ui  toolbar-data-view.ui  toolbar-formulas-view.ui  toolbar-home-view.ui  toolbar-insert-view.ui  toolbar-view-view.ui  window.ui
src/widgets/: sheet_column_header_menu.py  sheet_column_locator_menu.py  sheet_column_menu.py
test/: test_dax_expression.py  test_dax_function.py  test_dax_parser.py
